--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@fontsource/special-gothic-expanded-one": "^5.2.1",
     "@mui/material": "^7.0.2",
     "@mui/system": "^7.0.2",
+    "dotenv": "^16.5.0",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-google-recaptcha": "^3.1.0"
+    "react-google-recaptcha": "^3.1.0",
+    "styled-components": "^6.1.17"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
