--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^7.0.2",
     "@mui/system": "^7.0.2",
     "dotenv": "^16.5.0",
+    "framer-motion": "^12.7.4",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
