sanitização de entradas no cadastro/login

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
     "@mui/system": "^7.0.2",
+    "dompurify": "^3.2.5",
     "dotenv": "^16.5.0",
     "framer-motion": "^12.7.4",
     "next": "15.3.1",
