--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-google-recaptcha": "^3.1.0",
-    "styled-components": "^6.1.17"
+    "styled-components": "^6.1.17",
+    "typeface-playfair-display": "^1.1.13",
+    "typeface-quicksand": "^1.1.13"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
